...
    <string name="spm_cm_edit">Edit</string>
    <string name="spm_cm_delete">Delete</string>
    <!-- Action Bar -->
    <string name="spm_ab_add_profile">Add Server Profile</string>
    <!-- Delete Dialog -->
    <string name="spm_ad_delete_profile_msg">Are you sure you want to delete this server profile?</string>
    <string name="spm_delete_btn">Delete</string>
    <string name="spm_cancel_btn">Cancel</string>


    <!-- Server Profile Activity -->
    <string name="sp_bc_add_profile">New Server Profile</string>
    <string name="sp_bc_edit_profile">Edit Server Profile</string>
...
    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>


    <!-- Repository Activity -->
    <string name="r_browser_nothing_to_display">There are no resources in this folder.</string>
    <string name="r_search_nothing_to_display">No results from search.</string>
    <!-- Action Bar -->
    <string name="r_ab_favorites">Favorites</string>
    <string name="r_ab_search">Search</string>
    <string name="r_ab_refresh">Refresh</string>
    <!-- Context Menu -->
...
    <string name="rv_ab_save_report">Save Report</string>
    <!-- Toasts -->
    <string name="rv_t_external_storage_not_available">The external memory card is not available. Please mount the card and try again.</string>
    <string name="rv_t_report_saving_not_supported">This functionality is only available for JasperReports Server 5.2 or higher</string>

    <!-- Save Report Activity -->
    <string name="sr_ab_title">Save Report</string>
    <string name="sr_report_name">Report Name</string>
    <string name="sr_output_format">Output Format</string>
    <string name="sr_save_report_btn">Save</string>
    <!-- Toasts -->
    <string name="sr_t_report_saved">Report saved successfully</string>
    <!-- Error messages -->
    <string name="sr_error_field_is_empty">Can\'t be empty</string>
    <string name="sr_error_characters_not_allowed">Can\'t contain any of the following characters * \\ / \" \' : ? | &lt; &gt; + [ ]</string>
    <string name="sr_error_report_exists">A report with this name already exists</string>


    <!-- Favorites activity -->
    <string name="f_title">Favorites</string>


...
    <string name="sdr_rrd_hint">Report name</string>
    <string name="sdr_rrd_error_name_is_empty">Can\'t be empty</string>
    <string name="sdr_rrd_error_characters_not_allowed">Can\'t contain any of the following characters * \\ / \" \' : ? | &lt; &gt; + [ ]</string>
    <string name="sdr_rrd_error_report_exists">A report with this name already exists</string>
    <!-- Delete Report Dialog -->
    <string name="sdr_drd_title">Delete report</string>
    <string name="sdr_drd_msg">Do you really want to delete \"%s\"?</string>
    <!-- Toasts -->
    <string name="sdr_t_no_app_available">No \"%s\" viewer installed.</string>
    <string name="sdr_t_report_renaming_error">Cannot rename report</string>
    <string name="sdr_t_report_deletion_error">Cannot delete report</string>


...
