...
  ~ <http://www.gnu.org/licenses/lgpl>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/renameItem"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/sdr_cm_rename" />
    <item
        android:id="@+id/deleteItem"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/sdr_cm_delete" />
</menu>
