...
        <TextView
                style="@style/saveReport.reportName.label"
                android:text="@string/sr_report_name"
                />

        <EditText
                android:id="@+id/report_name_input"
                style="@style/saveReport.reportName.input"
                />

        <!-- Report output formats -->
        <TextView
            android:id="@+id/output_format_label"
            style="@style/saveReport.outputFormat.label"
            android:text="@string/sr_output_format"
        />

        <Spinner
            android:id="@+id/output_format_spinner"
            style="@style/saveReport.outputFormat.spinner"
            android:prompt="@string/sr_output_format"
        />

        <!-- Save report button -->
        <Button
...
